# Chess_SFML

./: .gitignore  Board.cpp  Board.h  BoardView.cpp  BoardView.h  Button.cpp  Button.h  CMakeLists.txt  CheckBox.cpp  CheckBox.h  ChessHandler.h  Group.cpp  Group.h  IListener.cpp  IListener.h  Label.cpp  Label.h  MainMenu.cpp  MainMenu.h  Makefile  Notification.cpp  Notification.h  NotificationManager.cpp  NotificationManager.h  README.md  ResourceHolder.cpp  ResourceHolder.h  TextField.cpp  TextField.h  handler_test.cpp  main.cpp
